# unity-kiss-mcp

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.py
server/: pyproject.toml
server/scripts/: check_unity.py  force_reset.sh  relay_probe.py
server/src/unity_mcp/: __init__.py  _update_check.py  backend_def.py  bridge.py  bridge_heartbeat.py  bridge_reload_state.py  bridge_socket.py  chat_relay.py  clarifier.py  cli_session.py  compile_state.py  compressor.py  connection_slot.py  console_levels.py  constants.py  crash_log.py  degrade.py  distiller.py  doctor.py  doctor_report.py  editor_log.py  editor_log_parser.py  errors.py  fuzzer.py  hinter.py  hinter_patterns.py  inference.py  input_normalizer.py  lessons.py  llm_config.py  lockfile.py  mcp_config_writer.py  metrics.py  metrics_report.py  middleware.py  middleware_async.py  middleware_guards.py  middleware_paths.py  middleware_pipeline.py  middleware_reads.py  (+22 more)
server/src/unity_mcp/ask/: executor.py  plans.py  router.py  summarizer.py
server/src/unity_mcp/budget/: __init__.py  _filelock.py  cost_tracker.py  registry.py  router.py
server/src/unity_mcp/config/: backup.py  clients.py  merger.py  resolver.py  (+1 more)
server/tests/: __init__.py  conftest.py  helpers.py  manual_integration_test.py  relay_helpers.py  test_animator_intent.py  test_ask.py  test_ask_user_tool.py  test_audit_fixes.py  test_auto_wire.py  test_autobatch.py  test_await_compile.py  test_backend_def.py  test_background_prefetch.py  test_batch.py  test_batch_conflict.py  test_batch_timeout.py  test_bridge.py  test_bridge_compile_state.py  test_bridge_edge_cases.py  test_bridge_heartbeat.py  test_bridge_lifecycle.py  test_bridge_port_rediscovery.py  test_bridge_reconnect.py  test_bridge_reload_state.py  test_bridge_resilience.py  test_bridge_should_retry.py  test_bridge_socket_options.py  test_budget_concurrency.py  test_budget_filelock.py  test_budget_integration.py  test_budget_registry.py  test_budget_router.py  test_build_args_contract.py  test_bump_version.py  test_catalog.py  test_changes.py  test_chat_relay.py  test_check_unity.py  test_clarifier.py  (+180 more)
server/tests/fixtures/: roslyn_responses.txt
server/tests/live/: chat_ui_helpers.py  conftest.py  relay_test_helpers.py  test_batch_runtime.py  test_chat_ui_monkey.py  test_component_lifecycle.py  test_console_compile.py  test_gridtest_movement.py  test_gridtest_playmode.py  test_hinter_real.py  test_live_chat_backends.py  test_multiscene_live.py  test_multiscene_stress_live.py  test_reconnect.py  test_reflect_real.py  test_search_scoped_live.py  test_smoke.py  test_sync_e2e.py  test_visual_diff_cli.py  test_visual_diff_haiku.py
(+1263 files in other folders)
