[project]
name = "unity-mcp"
version = "0.44.0"
description = "MCP server for Unity Editor control"
license = {text = "MIT"}
authors = [{name = "German Krasnikov", email = "german.krasnikov@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.27.1,<2",
    "pydantic>=2.0",
    "Pillow>=10.0",
]

[project.urls]
Homepage = "https://github.com/german-krasnikov/unity-kiss-mcp"
Repository = "https://github.com/german-krasnikov/unity-kiss-mcp"
Issues = "https://github.com/german-krasnikov/unity-kiss-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
unity-mcp = "unity_mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
asyncio_mode = "auto"
python_files = "test_*.py"
filterwarnings = [
    "error::EncodingWarning",
]
markers = [
    "live: requires running Unity Editor with MCP plugin on :9500",
    "live_cli: also calls real claude CLI (~$0.001/call) — opt-in via 'pytest -m \"live and live_cli\"'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


